# flight-delay-gnn-system

./: .gitignore  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
configs/: config.yaml
infra/scripts/: env.sh  setup.sh  start-all.sh  start-cassandra.sh  start-kafka.sh  start-spark.sh  stop-all.sh
notebooks/: 01_Get_Weather.ipynb  02_Prepare_Data.ipynb  03_Graph_Construction_PyG.ipynb  04__Training_GNN.ipynb  view_csv.ipynb
scripts/: init_cassandra.cql  setup_db.py
src/: config_loader.py
src/dashboard/: main.py
src/features/: graph_builder.py  preprocessor.py
src/models/: gnn_model.py  predictor.py
src/pipelines/: data_archiving.py  ingestion.py  python_inference_pipeline.py  spark_inference_pineline.py  training_pipeline.py
src/utils/: config_loader.py
