[project]
name = "flight-delay-gnn-system"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "kafka-python>=2.3.0",
    "matplotlib>=3.10.8",
    "meteostat>=1.7.6",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
